# veryfast

./: .gitignore  LICENSE  README.md  pyproject.toml
etc/: logging.yml
tests/: conftest.py  test_compute.py  test_engine.py  test_inserts.py  test_selects.py
veryfast/: __init__.py  database.py  models.py  settings.py
veryfast/utils/: compute.py
